Project page added to the app

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -3,7 +3,7 @@
   {{> head}}
   <body>
     {{> header}}
-    <p>This is the About page</p>
+    <p>Welcome to my exiting projects!</p>
     {{> footer}}
   </body>
 </html>
