--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,7 @@
 <html>
   {{> head}}
   <body>
-    <h1>{{pageTitle}}</h1>
+    {{> header}}
     <p>{{screamIt welcomeMessage}}</p>
     {{> footer}}
   </body>
